# base-d

./: .gitignore  ALPHABETS.md  CI_CD.md  Cargo.toml  HEX_EXPLANATION.md  OPTIMIZATION_SUMMARY.md  PROGRESS.md  README.md  SCHEMA.md  alphabets-example.toml  alphabets.toml  base256_matrix.txt  build.rs  dictionaries-example.toml  dictionaries.toml  mise.toml  test_auto_detection.sh  test_cli.sh  test_complex.fiche  test_complex.md  test_complex_mdast.json  test_complex_mdast_stripped.json
.cargo-husky/hooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  ci.yml  follow-the-white-rabbit.yml  knock-knock.yml  pr-checks.yml  release.yml  the-matrix-has-you.yml  wake-up.yml  wasm.yml
_temp/construct-audit-2025-12-08/: accessibility.md  architecture-diagram.md  architecture-recommendations.md  auth-review.md  cicd-review.md  compliance.md  cross-platform.md  data-review.md  dependencies.md  devex-review.md  docs-recommendations.md  error-handling.md  format-review.md  integrations.md  performance-recommendations.md  perspective-oracle.md  perspective-sati.md  perspective-spoon.md  quality-recommendations.md  security-findings.md  synthesis.md  tech-debt.md  test-data-review.md  ux-recommendations.md
benches/: encoding.rs
dictionaries/byterange/: base100.toml  weather.toml
dictionaries/chunked/rfc/: base16.toml  base32.toml  base32hex.toml  base64.toml  base64_imap.toml  base64url.toml  bioctal.toml  hex.toml
dictionaries/chunked/visual/: base256-matrix.toml  blocks_full.toml  boxdraw.toml
dictionaries/radix/ancient/: cuneiform.toml  hieroglyphs.toml  runic.toml
dictionaries/radix/esoteric/: alchemy.toml  arrows.toml  music.toml  zodiac.toml
dictionaries/radix/fundamental/: base4.toml  base8.toml  binary.toml  dna.toml
dictionaries/radix/games/: cards.toml  chess.toml  domino.toml  (+1 more)
docs/: ALPHABETS.md  API.md  BASE1024.md  BENCHMARKING.md  CI_CD.md  CLI.md  COMPRESSION.md  COMPRESSION_FEATURE.md  CUSTOM_ALPHABETS.md  CUSTOM_DICTIONARIES.md  DETECTION.md  DICTIONARIES.md  ENCODING_MODES.md  HASHING.md  HEX_EXPLANATION.md  MATRIX.md  MATRIX_ROADMAP.md  NEO.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PROGRESS.md  ROADMAP.md  SCHEMA_EDGE_CASES.md  SIMD.md  SIMD_BINARY.md  STREAMING.md  STREAMING_COMPRESSION_HASHING.md
docs/plans/: 152-pgp-alternating.md
examples/: auto_simd.rs  base1024_demo.rs  custom_alphabet.rs  custom_dictionary.rs  generate_base1024.rs  generate_base256_matrix.rs  hello_world.rs  list_alphabets.rs  list_dictionaries.rs  matrix_demo.rs  simd_check.rs  test_base256_simd.rs
scripts/: bench_summary.py
src/: alphabet.rs  bench.rs  byte_range.rs  chunked.rs  compression.rs  config.rs  convenience.rs  detection.rs  encoding.rs  hashing.rs  lib.rs  main.rs  prelude.rs  streaming.rs  tests.rs  wasm.rs
src/cli/: args.rs  commands.rs  config.rs  global.rs  mod.rs
src/core/: alphabet.rs  alternating_dictionary.rs  config.rs  dictionary.rs  mod.rs  word_dictionary.rs
src/encoders/: byte_range.rs  chunked.rs  encoding.rs  mod.rs  streaming.rs
src/features/: compression.rs  detection.rs  hashing.rs  mod.rs
src/simd/: alphabets.rs  mod.rs  translate.rs  variants.rs  x86_64.rs
src/wordlists/: mod.rs
tests/: cli.rs  emoji_animals_bug.rs  nul_byte_fuzz.rs  schema_api.rs
(+104 files in other folders)
