[package]
name = "base-d"
version = "0.1.18"
edition = "2021"
authors = ["Cory Zibell <cory@zibell.dev>"]
description = "Universal multi-alphabet encoder: Encode binary data to 33+ alphabets including RFC standards, hieroglyphs, emoji, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coryzibell/base-d"
homepage = "https://github.com/coryzibell/base-d"
documentation = "https://docs.rs/base-d"
readme = "README.md"
keywords = ["encoding", "base64", "cli", "unicode", "converter"]
categories = ["command-line-utilities", "encoding", "text-processing"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
terminal_size = "0.3"
flate2 = "1.0"
brotli = "7.0"
zstd = "0.13"
lz4 = "1.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "base_d"
path = "src/lib.rs"

[[bench]]
name = "encoding"
harness = false
